--- a/trivia/index.html
+++ b/trivia/index.html
@@ -17,7 +17,7 @@
         <div class="container">
             <div class="section">
                 <h2>Part 1: Multiple Choice </h2>
-                <hr>
+                <h3>What is the approximate ratio of people to sheep in New Zealand?</h3>
                 <!-- TODO: Add multiple choice question here -->
             </div>
 
