--- a/trivia/index.html
+++ b/trivia/index.html
@@ -17,8 +17,13 @@
         <div class="container">
             <div class="section">
                 <h2>Part 1: Multiple Choice </h2>
-                <h3>What is the approximate ratio of people to sheep in New Zealand?</h3>
                 <!-- TODO: Add multiple choice question here -->
+                <h3>What is the approximate ratio of people to sheep in New Zealand?</h3>
+                <input type="button" onclick="alert('Hello World!')" value="6 people per 1 sheep">
+                <input type="button" onclick="alert('Hello World!')" value="3 people per 1 sheep">
+                <input type="button" onclick="alert('Hello World!')" value="1 person per 1 sheep">
+                <input type="button" onclick="alert('Hello World!')" value="1 person per 3 sheep">
+                <input type="button" onclick="alert('Hello World!')" value="1 person per 6 sheep">
             </div>
 
             <div class="section">
