Fri, Dec 22, 2023, 9:48 PM +05:00

--- a/trivia/index.html
+++ b/trivia/index.html
@@ -7,6 +7,7 @@
         <title>Trivia!</title>
         <script>
             // TODO: Add code to check answers to questions
+
         </script>
     </head>
     <body>
@@ -19,17 +20,22 @@
                 <h2>Part 1: Multiple Choice </h2>
                 <!-- TODO: Add multiple choice question here -->
                 <h3>What is the approximate ratio of people to sheep in New Zealand?</h3>
-                <input type="button" onclick="alert('Hello World!')" value="6 people per 1 sheep">
-                <input type="button" onclick="alert('Hello World!')" value="3 people per 1 sheep">
-                <input type="button" onclick="alert('Hello World!')" value="1 person per 1 sheep">
-                <input type="button" onclick="alert('Hello World!')" value="1 person per 3 sheep">
-                <input type="button" onclick="alert('Hello World!')" value="1 person per 6 sheep">
+                <button>6 people per 1 sheep</button>
+                <button>3 people per 1 sheep</button>
+                <button>1 person per 1 sheep"</button>
+                <button>1 person per 3 sheep</button>
+                <button>1 person per 6 sheep</button>
+                <p>id='mcqs'</p>
+
             </div>
 
             <div class="section">
                 <h2>Part 2: Free Response</h2>
-                <hr>
                 <!-- TODO: Add free response question here -->
+                <h3>In which country is it illegal to own only one guinea pig, as a lone guinea pig might get lonely?</h3>
+                <!-- <input type="text"></input>
+                <input type="submit">Check Answer</input> -->
+
             </div>
         </div>
     </body>
