Fri, Dec 22, 2023, 9:49 PM +05:00

--- a/trivia/index.html
+++ b/trivia/index.html
@@ -25,6 +25,7 @@
                 <button>1 person per 1 sheep"</button>
                 <button>1 person per 3 sheep</button>
                 <button>1 person per 6 sheep</button>
+                
                 <p>id='mcqs'</p>
 
             </div>
@@ -33,8 +34,10 @@
                 <h2>Part 2: Free Response</h2>
                 <!-- TODO: Add free response question here -->
                 <h3>In which country is it illegal to own only one guinea pig, as a lone guinea pig might get lonely?</h3>
-                <!-- <input type="text"></input>
-                <input type="submit">Check Answer</input> -->
+                <input type="text"></input>
+                <button>Check Answer</button>
+
+                <p>id='answer'</p>
 
             </div>
         </div>
