Fri, Dec 22, 2023, 9:56 PM +05:00

--- a/trivia/index.html
+++ b/trivia/index.html
@@ -7,6 +7,23 @@
         <title>Trivia!</title>
         <script>
             // TODO: Add code to check answers to questions
+            document.addEventListener('DOMContentLoaded', function()
+            {
+                let correct = document.querySelector('#correct');
+                
+
+
+
+
+            }
+
+
+
+
+
+
+
+            )
 
         </script>
     </head>
@@ -20,12 +37,12 @@
                 <h2>Part 1: Multiple Choice </h2>
                 <!-- TODO: Add multiple choice question here -->
                 <h3>What is the approximate ratio of people to sheep in New Zealand?</h3>
-                <button>6 people per 1 sheep</button>
-                <button>3 people per 1 sheep</button>
-                <button>1 person per 1 sheep"</button>
-                <button>1 person per 3 sheep</button>
-                <button>1 person per 6 sheep</button>
-                
+                <button id='Incorrect'>6 people per 1 sheep</button>
+                <button id='Incorrect'>3 people per 1 sheep</button>
+                <button id='Incorrect'>1 person per 1 sheep"</button>
+                <button id='Incorrect'>1 person per 3 sheep</button>
+                <button id='Correct'>1 person per 6 sheep</button>
+
                 <p>id='mcqs'</p>
 
             </div>
