Fri, Dec 22, 2023, 10:00 PM +05:00

--- a/trivia/index.html
+++ b/trivia/index.html
@@ -10,17 +10,14 @@
             document.addEventListener('DOMContentLoaded', function()
             {
                 let correct = document.querySelector('#correct');
-                
-
-
+                correct.addEventListener('click', function()
+                {
+                    correct.style.backgroundColor = 'green';
+                    document.querySelector('#correct').innerHtml = 'Correct';
+                }
 
 
             }
-
-
-
-
-
 
 
             )
