Fri, Dec 22, 2023, 10:18 PM +05:00

--- a/trivia/index.html
+++ b/trivia/index.html
@@ -31,7 +31,8 @@
                 // Part 2
                 document.querySelector('#answer').addEventListener('click', function()
                 {
-                    let answer = 
+                    let answer = document.querySelector('input');
+                    
                 });
 
             });
