--- a/homepage/index.html
+++ b/homepage/index.html
@@ -5,13 +5,13 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
         <link href="styles.css" rel="stylesheet">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="width=device-width, initial-scale=1.0">
 
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="software devevlopment company providing data science, machine learning, artificail intelligence ai, blockchain, mobile development, web development, game deveopment, and cybersecurity services">
 
         <title>My Webpage</title>
     </head>
     <body>
-        hello, homepage
+        <h1>Where innovation meets </h1>
     </body>
 </html>
