Sat, Dec 23, 2023, 6:36 PM +05:00

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -12,6 +12,7 @@
         <title>My Webpage</title>
     </head>
     <body>
-        <h1>Where Innovation Meets the Echo of Tomorrow</h1>
+        <h1>Eonweave</h1>
+        <h2>Where Innovation Meets the Echo of Tomorrow</h2>
     </body>
 </html>
