Sat, Dec 23, 2023, 6:39 PM +05:00

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -12,7 +12,8 @@
         <title>My Webpage</title>
     </head>
     <body>
-        <h1>Eonweave</h1>
-        <h2>Where Innovation Meets the Echo of Tomorrow</h2>
+        <h1>Eonweave: Innovation Meets the Echo of Tomorrow</h1>
+        <br>
+        <h2>Where You Find Engineered Software Solutions</h2>
     </body>
 </html>
