--- a/homepage/index.html
+++ b/homepage/index.html
@@ -11,6 +11,13 @@
 
         <title>My Webpage</title>
     </head>
+
+    <nav>
+        <a href="about.html">About</a>
+        <a href="services.html">Services</a>
+        <a href="contact.html">Contact</a>
+    </nav>
+    <!--  -->
     <body>
         <h1>Eonweave: Innovation Meets the Echo of Tomorrow</h1>
         <br>
