Sat, Dec 23, 2023, 6:52 PM +05:00

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -13,9 +13,9 @@
     </head>
 
     <nav>
-        <a href="about.html">  About  </a>
-        <a href="services.html">  Services  </a>
-        <a href="contact.html">  Contact  </a>
+        <a target="_blank" href="about.html">About</a>
+        <a target="_blank" href="services.html">Services</a>
+        <a href="contact.html">Contact</a>
     </nav>
     <hr>
     <body>
@@ -23,5 +23,6 @@
         <h1>Eonweave: Innovation Meets the Echo of Tomorrow</h1>
         <br>
         <h2>Where You Find Engineered Software Solutions</h2>
+        <p1></p1>
     </body>
 </html>
