--- a/homepage/index.html
+++ b/homepage/index.html
@@ -23,31 +23,36 @@
         <h1>Eonweave: Innovation Meets the Echo of Tomorrow</h1>
         <br>
         <h2>Where You Find Engineered Software Solutions</h2>
-
+        <br>
+        <h4>Crafting Code, Shaping Reality</h4>
         <p1>
-            Crafting Code, Shaping Reality: At [Company Name], we're not just writing lines of code,
+            At [Company Name], we're not just writing lines of code,
             we're architects of tomorrow. We forge digital solutions that bridge the gap between your vision and reality,
             transforming pixels into seamless experiences that empower your business.
         </p1>
-
+        <br>
+        <h4>Innovation in Every Byte</h4>
         <p2>
-            Innovation in Every Byte: We thrive on pushing boundaries, embracing cutting-edge technologies like AI, cloud, and
+            We thrive on pushing boundaries, embracing cutting-edge technologies like AI, cloud, and
             blockchain to craft revolutionary software. Our expert team, brimming with passion and ingenuity,
             delivers not just functionality, but groundbreaking solutions that propel you ahead of the curve.
         </p2>
-
+        <br>
+        <h4>Your Vision, Our Canvas</h4>
         <p3>
-            Your Vision, Our Canvas: We believe in collaborative magic. Your ideas are the spark, and our expertise is the fuel.
+            We believe in collaborative magic. Your ideas are the spark, and our expertise is the fuel.
             We work closely with you, weaving your vision into intricate digital tapestries, tailored to your unique needs and challenges.
             Together, we build software that not just meets expectations, but exceeds them.
         </p3>
-
+        <br>
+        <h4>Beyond Code, Beyond Expectations</h4>
         <p4>
-            Beyond Code, Beyond Expectations: Building software is just the beginning. We invest in long-term partnerships,
-             providing ongoing support and maintenance. We see ourselves as an extension of your team,
-             relentlessly dedicated to your success. With [Company Name], you gain not just software,
-             but reliable partners for your digital journey.
+            Building software is just the beginning. We invest in long-term partnerships,
+            providing ongoing support and maintenance. We see ourselves as an extension of your team,
+            relentlessly dedicated to your success. With [Company Name], you gain not just software,
+            but reliable partners for your digital journey.
         </p4>
-        
+        <br>
+
     </body>
 </html>
