--- a/homepage/index.html
+++ b/homepage/index.html
@@ -26,16 +26,17 @@
         <br>
         <h4>Crafting Code, Shaping Reality</h4>
         <p1>
-            At [Company Name], we're not just writing lines of code,
-            we're architects of tomorrow. We forge digital solutions that bridge the gap between your vision and reality,
+            Not just writing lines of code, but forging digital solutions that bridge the gap between your vision and reality,
             transforming pixels into seamless experiences that empower your business.
+            <pre></pre>
         </p1>
 
         <h4>Innovation in Every Byte</h4>
         <p2>
-            We thrive on pushing boundaries, embracing cutting-edge technologies like AI, cloud, and
+            Embracing cutting-edge technologies like AI, cloud, and
             blockchain to craft revolutionary software. Our expert team, brimming with passion and ingenuity,
             delivers not just functionality, but groundbreaking solutions that propel you ahead of the curve.
+            <pre></pre>
         </p2>
 
         <h4>Your Vision, Our Canvas</h4>
@@ -43,6 +44,7 @@
             We believe in collaborative magic. Your ideas are the spark, and our expertise is the fuel.
             We work closely with you, weaving your vision into intricate digital tapestries, tailored to your unique needs and challenges.
             Together, we build software that not just meets expectations, but exceeds them.
+            <pre></pre>
         </p3>
 
         <h4>Beyond Code, Beyond Expectations</h4>
@@ -51,8 +53,9 @@
             providing ongoing support and maintenance. We see ourselves as an extension of your team,
             relentlessly dedicated to your success. With [Company Name], you gain not just software,
             but reliable partners for your digital journey.
+            <pre></pre>
         </p4>
-        
+
 
     </body>
 </html>
