--- a/homepage/index.html
+++ b/homepage/index.html
@@ -33,9 +33,8 @@
 
         <h4>Innovation in Every Byte</h4>
         <p2>
-            Embracing cutting-edge technologies like AI, cloud, and
-            blockchain to craft revolutionary software. Our expert team, brimming with passion and ingenuity,
-            delivers not just functionality, but groundbreaking solutions that propel you ahead of the curve.
+            Embracing cutting-edge technologies like AI, cloud, and blockchain to craft you revolutionary software.
+            Delivering not just functionality, but groundbreaking solutions that propel you ahead of the curve.
             <pre></pre>
         </p2>
 
@@ -49,10 +48,9 @@
 
         <h4>Beyond Code, Beyond Expectations</h4>
         <p4>
-            Building software is just the beginning. We invest in long-term partnerships,
-            providing ongoing support and maintenance. We see ourselves as an extension of your team,
-            relentlessly dedicated to your success. With [Company Name], you gain not just software,
-            but reliable partners for your digital journey.
+            We invest in long-term partnerships, providing ongoing support and maintenance.
+            We see ourselves as an extension of your team, relentlessly dedicated to your success.
+            With Eonweave, you gain not just software, but reliable partners for your digital journey.
             <pre></pre>
         </p4>
 
