--- a/homepage/index.html
+++ b/homepage/index.html
@@ -6,7 +6,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
         <link href="styles.css" rel="stylesheet">
 
-        <meta name="viewport" content="width=device-width-10, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="software devevlopment company providing data science, machine learning, artificail intelligence ai, blockchain, mobile development, web development, game deveopment, and cybersecurity services">
 
         <title>My Webpage</title>
