--- a/homepage/services.html
+++ b/homepage/services.html
@@ -1,7 +1,60 @@
 <!DOCTYPE html>
 
 <html lang="en">
+    <head>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+        <link href="styles.css" rel="stylesheet">
 
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="software devevlopment company providing data science, machine learning, artificail intelligence ai, blockchain, mobile development, web development, game deveopment, and cybersecurity services">
+
+        <title>My Webpage</title>
+    </head>
+
+    <nav>
+        <a target="_blank" href="about.html">About</a>
+        <a target="_blank" href="services.html">Services</a>
+        <a href="contact.html">Contact</a>
+    </nav>
+    <hr>
+    <body>
+
+        <h1>Eonweave: Innovation Meets the Echo of Tomorrow</h1>
+        <br>
+        <h2>Where You Find Engineered Software Solutions</h2>
+        <br>
+        <h4>Crafting Code, Shaping Reality</h4>
+        <p1>
+            Not just writing lines of code, but forging digital solutions that bridge the gap between your vision and reality,
+            transforming pixels into seamless experiences that empower your business.
+            <pre></pre>
+        </p1>
+
+        <h4>Innovation in Every Byte</h4>
+        <p2>
+            Embracing cutting-edge technologies like AI, cloud, and blockchain to craft you revolutionary software.
+            Delivering not just functionality, but groundbreaking solutions that propel you ahead of the curve.
+            <pre></pre>
+        </p2>
+
+        <h4>Your Vision, Our Canvas</h4>
+        <p3>
+            We believe in collaborative magic. Your ideas are the spark, and our expertise is the fuel.
+            We work closely with you, weaving your vision into intricate digital tapestries, tailored to your unique needs and challenges.
+            Together, we build software that not just meets expectations, but exceeds them.
+            <pre></pre>
+        </p3>
+
+        <h4>Beyond Code, Beyond Expectations</h4>
+        <p4>
+            We invest in long-term partnerships, providing ongoing support and maintenance.
+            We see ourselves as an extension of your team, relentlessly dedicated to your success.
+            With Eonweave, you gain not just software, but reliable partners for your digital journey.
+            <pre></pre>
+        </p4>
+
+    </body>
 
 
 
