Sat, Dec 23, 2023, 8:47 PM +05:00

--- a/homepage/services.html
+++ b/homepage/services.html
@@ -15,7 +15,7 @@
 
     <nav>
         <a target="_blank" href="about.html">About</a>
-        <a target="_blank" href="services.html">Services</a>
+        <a target="_blank" href="index.html">Home</a>
         <a href="contact.html">Contact</a>
     </nav>
     <hr>
