--- a/homepage/index.html
+++ b/homepage/index.html
@@ -7,6 +7,7 @@
         <link href="styles.css" rel="stylesheet">
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8">
         <meta name="description" content="software devevlopment company providing data science, machine learning, artificail intelligence ai, blockchain, mobile development, web development, game deveopment, and cybersecurity services">
 
         <title>My Webpage</title>
