--- a/homepage/services.html
+++ b/homepage/services.html
@@ -10,7 +10,7 @@
         <meta charset="UTF-8">
         <meta name="description" content="software devevlopment company providing data science, machine learning, artificail intelligence ai, blockchain, mobile development, web development, game deveopment, and cybersecurity services">
 
-        <title>My Webpage</title>
+        <title>Services</title>
     </head>
 
     <nav>
