--- a/homepage/services.html
+++ b/homepage/services.html
@@ -8,7 +8,7 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
-        <meta name="description" content="software devevlopment company providing data science, machine learning, artificail intelligence ai, blockchain, mobile development, web development, game deveopment, and cybersecurity services">
+        <meta name="description" content="software devevlopment company providing data science, machine learning, artificial intelligence ai, blockchain, mobile development, web development, game deveopment, and cybersecurity services">
 
         <title>Services</title>
     </head>
