Sat, Dec 23, 2023, 9:00 PM +05:00

--- a/homepage/services.html
+++ b/homepage/services.html
@@ -20,56 +20,30 @@
     </nav>
     <hr>
     <body>
+        <h4>Data Science</h4>
+        <p1>Uncover hidden insights in your data. We transform numbers into actionable strategies.<pre></pre></p1>
 
-        <h1>Eonweave: Innovation Meets the Echo of Tomorrow</h1>
-        <br>
-        <h2>Where You Find Engineered Software Solutions</h2>
-        <br>
-        <h4>Crafting Code, Shaping Reality</h4>
-        <p1>
-            Not just writing lines of code, but forging digital solutions that bridge the gap between your vision and reality,
-            transforming pixels into seamless experiences that empower your business.
-            <pre></pre>
-        </p1>
-
-        <h4>Innovation in Every Byte</h4>
+        <h4>Machine Learning / Artificial Intelligence (AI)</h4>
         <p2>
-            Embracing cutting-edge technologies like AI, cloud, and blockchain to craft you revolutionary software.
-            Delivering not just functionality, but groundbreaking solutions that propel you ahead of the curve.
+             Train intelligent systems to solve your problems. We automate predictions and decisions.
+             Give your software brains. We build AI solutions that learn and adapt.
             <pre></pre>
         </p2>
 
-        <h4>Your Vision, Our Canvas</h4>
-        <p3>
-            We believe in collaborative magic. Your ideas are the spark, and our expertise is the fuel.
-            We work closely with you, weaving your vision into intricate digital tapestries, tailored to your unique needs and challenges.
-            Together, we build software that not just meets expectations, but exceeds them.
-            <pre></pre>
-        </p3>
+        <h4>Blockchain</h4>
+        <p3>Secure your data with trustless transparency. We build tamper-proof digital ledgers.<pre></pre></p3>
 
-        <h4>Beyond Code, Beyond Expectations</h4>
-        <p4>
-            We invest in long-term partnerships, providing ongoing support and maintenance.
-            We see ourselves as an extension of your team, relentlessly dedicated to your success.
-            With Eonweave, you gain not just software, but reliable partners for your digital journey.
-            <pre></pre>
-        </p4>
+        <h4>Mobile Development</h4>
+        <p4>Reach users in their pockets. We craft native apps for seamless mobile experiences.<pre></pre></p4>
 
+        <h4>Web Development</h4>
+        <p5>Build your online presence, beautifully. We create web solutions that engage and convert.<pre></pre></p5>
+
+        <h4>Game Development</h4>
+        <p6>Craft immersive worlds that captivate. We build games that entertain and inspire.<pre></pre></p6>
+
+        <h4>Cybersecurity</h4>
+        <p7>Protect your digital assets from evolving threats. We build fortresses against cyberattacks.<pre></pre></p7>
     </body>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 </html>
