Sat, Dec 23, 2023, 9:03 PM +05:00

--- a/homepage/about.html
+++ b/homepage/about.html
@@ -10,13 +10,13 @@
         <meta charset="UTF-8">
         <meta name="description" content="software devevlopment company providing data science, machine learning, artificial intelligence ai, blockchain, mobile development, web development, game deveopment, and cybersecurity services">
 
-        <title>My Webpage</title>
+        <title>About</title>
     </head>
 
     <nav>
-        <a target="_blank" href="about.html">About</a>
-        <a target="_blank" href="index.html">Home</a>
-        <a href="contact.html">Contact</a>
+        <a href="services.html">Services</a>
+        <a href="index.html">Home</a>
+        <a target="_blank" href="contact.html">Contact</a>
     </nav>
     <hr>
     <body>
