--- a/homepage/index.html
+++ b/homepage/index.html
@@ -14,9 +14,9 @@
     </head>
 
     <nav>
-        <a target="_blank" href="about.html">About</a>
-        <a target="_blank" href="services.html">Services</a>
-        <a href="contact.html">Contact</a>
+        <a href="about.html">About</a>
+        <a href="services.html">Services</a>
+        <a target="_blank" href="contact.html">Contact</a>
     </nav>
     <hr>
     <body>
