Sat, Dec 23, 2023, 9:24 PM +05:00

--- a/homepage/services.html
+++ b/homepage/services.html
@@ -21,29 +21,29 @@
     <hr>
     <body>
         <h4>Data Science</h4>
-        <p1>Uncover hidden insights in your data. We transform numbers into actionable strategies.<pre></pre></p1>
+        <p>Uncover hidden insights in your data. We transform numbers into actionable strategies.<pre></pre></p>
 
         <h4>Machine Learning / Artificial Intelligence (AI)</h4>
-        <p2>
+        <p>
              Train intelligent systems to solve your problems. We automate predictions and decisions.
              Give your software brains. We build AI solutions that learn and adapt.
             <pre></pre>
-        </p2>
+        </p>
 
         <h4>Blockchain</h4>
-        <p3>Secure your data with trustless transparency. We build tamper-proof digital ledgers.<pre></pre></p3>
+        <p>Secure your data with trustless transparency. We build tamper-proof digital ledgers.<pre></pre></p>
 
         <h4>Mobile Development</h4>
-        <p4>Reach users in their pockets. We craft native apps for seamless mobile experiences.<pre></pre></p4>
+        <p>Reach users in their pockets. We craft native apps for seamless mobile experiences.<pre></pre></p>
 
         <h4>Web Development</h4>
-        <p5>Build your online presence, beautifully. We create web solutions that engage and convert.<pre></pre></p5>
+        <p>Build your online presence, beautifully. We create web solutions that engage and convert.<pre></pre></p>
 
         <h4>Game Development</h4>
-        <p6>Craft immersive worlds that captivate. We build games that entertain and inspire.<pre></pre></p6>
+        <p>Craft immersive worlds that captivate. We build games that entertain and inspire.<pre></pre></p>
 
         <h4>Cybersecurity</h4>
-        <p7>Protect your digital assets from evolving threats. We build fortresses against cyberattacks.<pre></pre></p7>
+        <p>Protect your digital assets from evolving threats. We build fortresses against cyberattacks.<pre></pre></p>
     </body>
 
 </html>
