Sat, Dec 23, 2023, 9:26 PM +05:00

--- a/homepage/contact.html
+++ b/homepage/contact.html
@@ -20,8 +20,19 @@
     </nav>
     <hr>
     <body>
-
-
+        <h1>Enter Your Message and Contact Information</h1>
+        <form id="myForm">
+            <label for="message">Message:</label><br>
+            <textarea id="message" rows="5" cols="30"></textarea><br><br>
+            <label for="name">Name:</label><br>
+            <input type="text" id="name"><br><br>
+            <label for="email">Email:</label><br>
+            <input type="email" id="email"><br><br>
+            <button type="submit">Submit</button>
+        </form>
+        
+        <p id="response"></p>
+        <script src="script.js"></script>
     </body>
 
 
