Sat, Dec 23, 2023, 10:56 PM +05:00

--- a/homepage/contact.html
+++ b/homepage/contact.html
@@ -24,7 +24,7 @@
     </nav>
     <hr>
     <body>
-        <h1>Enter Your Message and Contact Information</h1>
+        <h1>Enter Your Message and Contact Information</h1><br>
         <form id="myForm">
             <label for="message">Message:</label><br>
             <textarea id="message" rows="5" cols="100"></textarea><br><br>
