Sat, Dec 23, 2023, 11:21 PM +05:00

--- a/homepage/services.html
+++ b/homepage/services.html
@@ -24,30 +24,45 @@
     </nav>
     <hr>
     <body>
-        <h4>Data Science</h4>
-        <p>Uncover hidden insights in your data. We transform numbers into actionable strategies.<pre></pre></p>
+        <div class="service">
+            <h4>Data Science</h4>
+            <p>Uncover hidden insights in your data. We transform numbers into actionable strategies.<pre></pre></p>
+        </div>
 
-        <h4>Machine Learning / Artificial Intelligence (AI)</h4>
-        <p>
-             Train intelligent systems to solve your problems. We automate predictions and decisions.
-             Give your software brains. We build AI solutions that learn and adapt.
-            <pre></pre>
-        </p>
+        <div class="service">
+            <h4>Machine Learning / Artificial Intelligence (AI)</h4>
+            <p>
+                 Train intelligent systems to solve your problems. We automate predictions and decisions.
+                 Give your software brains. We build AI solutions that learn and adapt.
+                <pre></pre>
+            </p>
+        </div>
 
-        <h4>Blockchain</h4>
-        <p>Secure your data with trustless transparency. We build tamper-proof digital ledgers.<pre></pre></p>
+        <div class="service">
+            <h4>Blockchain</h4>
+            <p>Secure your data with trustless transparency. We build tamper-proof digital ledgers.<pre></pre></p>
+        </div>
 
-        <h4>Mobile Development</h4>
-        <p>Reach users in their pockets. We craft native apps for seamless mobile experiences.<pre></pre></p>
+        <div class="service">
+            <h4>Mobile Development</h4>
+            <p>Reach users in their pockets. We craft native apps for seamless mobile experiences.<pre></pre></p>
+        </div>
 
-        <h4>Web Development</h4>
-        <p>Build your online presence, beautifully. We create web solutions that engage and convert.<pre></pre></p>
+        <div class="service">
+            <h4>Web Development</h4>
+            <p>Build your online presence, beautifully. We create web solutions that engage and convert.<pre></pre></p>
+        </div>
 
-        <h4>Game Development</h4>
-        <p>Craft immersive worlds that captivate. We build games that entertain and inspire.<pre></pre></p>
+        <div class="service">
+            <h4>Game Development</h4>
+            <p>Craft immersive worlds that captivate. We build games that entertain and inspire.<pre></pre></p>
+        </div>
 
-        <h4>Cybersecurity</h4>
-        <p>Protect your digital assets from evolving threats. We build fortresses against cyberattacks.<pre></pre></p>
+        <div class="service">
+            <h4>Cybersecurity</h4>
+            <p>Protect your digital assets from evolving threats. We build fortresses against cyberattacks.<pre></pre></p>
+        </div>
+
     </body>
 
 </html>
