--- a/homepage/about.html
+++ b/homepage/about.html
@@ -58,8 +58,8 @@
         </p>
 
         <p>
-            Ready to build something remarkable?
-            Contact Eonweave today and let's turn your vision into reality. Together, we'll write the next chapter of your
+            Ready to build something remarkable?<br>
+            <a target="_blank" href="contact.html">Contact</a>Eonweave today and let's turn your vision into reality. Together, we'll write the next chapter of your
             success story, driven by our shared values and unyielding ambition.
         </p>
 
