Sat, Dec 23, 2023, 11:53 PM +05:00

--- a/homepage/about.html
+++ b/homepage/about.html
@@ -59,8 +59,8 @@
 
         <p>
             Ready to build something remarkable?<br>
-            <a target="_blank" href="contact.html">Contact</a>Eonweave today and let's turn your vision into reality. Together, we'll write the next chapter of your
-            success story, driven by our shared values and unyielding ambition.
+            <a target="_blank" href="contact.html">Contact</a>Eonweave today and let's turn your vision into reality.
+            Together, we'll write the next chapter of your success story, driven by our shared values and unyielding ambition.
         </p>
 
     </body>
