--- a/homepage/about.html
+++ b/homepage/about.html
@@ -63,6 +63,16 @@
             Together, we'll write the next chapter of your success story, driven by our shared values and unyielding ambition.
         </p>
 
+        <footer>
+            <p>&copy; 2023 Eonveave</p>
+            <p>Contact: <a href="mailto:youremail@example.com">xyz@example.com</a></p>
+            <nav>
+                <a href="#">Home</a>
+                <a href="#">About</a>
+                <a href="#">Contact</a>
+            </nav>
+          </footer>
+
     </body>
 
 
