Sat, Dec 23, 2023, 11:57 PM +05:00

--- a/homepage/about.html
+++ b/homepage/about.html
@@ -63,13 +63,14 @@
             Together, we'll write the next chapter of your success story, driven by our shared values and unyielding ambition.
         </p>
 
+        <hr>
         <footer>
             <p>&copy; 2023 Eonveave</p>
             <p>Contact: <a href="mailto:youremail@example.com">xyz@example.com</a></p>
             <nav>
-                <a href="#">Home</a>
-                <a href="#">About</a>
-                <a href="#">Contact</a>
+                <a href="services.html">Services</a>
+                <a href="index.html">Home</a>
+                <a target="_blank" href="contact.html">Contact</a>
             </nav>
           </footer>
 
