Sat, Dec 23, 2023, 11:59 PM +05:00

--- a/homepage/contact.html
+++ b/homepage/contact.html
@@ -37,6 +37,17 @@
 
         <p id="response"></p>
         <script src="script.js"></script>
+
+        <hr>
+        <footer>
+            <p>&copy; 2023 Eonveave</p>
+            <p>Email: <a href="mailto:youremail@example.com">xyz@example.com</a></p>
+            <nav>
+                <a href="about.html">About</a>
+                <a href="index.html">Home</a>
+                <a href="services.html">Services</a>
+            </nav>
+          </footer>
     </body>
 
 
