--- a/homepage/services.html
+++ b/homepage/services.html
@@ -65,6 +65,16 @@
             </div>
         </div>
 
+        <hr>
+        <footer>
+            <p>&copy; 2023 Eonveave</p>
+            <p>Email: <a href="mailto:youremail@example.com">xyz@example.com</a></p>
+            <nav>
+                <a href="about.html">About</a>
+                <a href="index.html">Home</a>
+                <a target="_blank" href="contact.html">Contact</a>
+            </nav>
+          </footer>
     </body>
 
 </html>
