--- a/homepage/about.html
+++ b/homepage/about.html
@@ -66,7 +66,7 @@
         <hr>
         <footer>
             <p>&copy; 2023 Eonveave</p>
-            <p>Contact: <a href="mailto:youremail@example.com">xyz@example.com</a></p>
+            <p>Email: <a href="mailto:youremail@example.com">xyz@example.com</a></p>
             <nav>
                 <a href="services.html">Services</a>
                 <a href="index.html">Home</a>
