--- a/homepage/index.html
+++ b/homepage/index.html
@@ -24,7 +24,7 @@
     </nav>
     <hr>
     <body>
-        
+
         <h1>Eonweave: Innovation Meets the Echo of Tomorrow</h1>
         <br>
         <h2>Where You Find Engineered Software Solutions</h2>
@@ -59,5 +59,15 @@
             <pre></pre>
         </p>
 
+        <hr>
+        <footer>
+            <p>&copy; 2023 Eonveave</p>
+            <p>Email: <a href="mailto:youremail@example.com">xyz@example.com</a></p>
+            <nav>
+                <a href="about.html">About</a>
+                <a href="services.html">Services</a>
+                <a target="_blank" href="contact.html">Contact</a>
+            </nav>
+          </footer>
     </body>
 </html>
