--- a/homepage/about.html
+++ b/homepage/about.html
@@ -65,8 +65,7 @@
 
         <hr>
         <footer>
-            <p>&copy; 2023 Eonveave</p>
-            <p>Email: <a href="mailto:youremail@example.com">xyz@example.com</a></p>
+            <p0>&copy; 2023 Eonveave</p0>
             <a href="services.html">Services</a>
             <a href="index.html">Home</a>
             <a target="_blank" href="contact.html">Contact</a>
