--- a/homepage/services.html
+++ b/homepage/services.html
@@ -67,8 +67,7 @@
 
         <hr>
         <footer>
-            <p>&copy; 2023 Eonveave</p>
-            <p>Email: <a href="mailto:youremail@example.com">xyz@example.com</a></p>
+            <p0>&copy; 2023 Eonveave</p0>
             <a href="about.html">About</a>
             <a href="index.html">Home</a>
             <a target="_blank" href="contact.html">Contact</a>
