--- a/homepage/index.html
+++ b/homepage/index.html
@@ -61,8 +61,7 @@
 
         <hr>
         <footer>
-            <p>&copy; 2023 Eonveave</p>
-            <p>Email: <a href="mailto:youremail@example.com">xyz@example.com</a></p>
+            <p0>&copy; 2023 Eonveave</p0>
             <a href="about.html">About</a>
             <a href="services.html">Services</a>
             <a target="_blank" href="contact.html">Contact</a>
