Sun, Dec 24, 2023, 12:25 AM +05:00

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -27,7 +27,7 @@
 
         <h1>Eonweave: Innovation Meets the Echo of Tomorrow</h1>
         <br>
-        <h2>Where You Find Engineered Software Solutions</h2>
+        <h2>Find Engineered Software Solutions</h2>
         <br>
         <h4>Crafting Code, Shaping Reality</h4>
         <p>
