Sun, Dec 24, 2023, 12:30 AM +05:00

--- a/homepage/about.html
+++ b/homepage/about.html
@@ -24,10 +24,15 @@
     </nav>
     <hr>
     <body>
-        <h3><br>
+        <h2>
+            Our Legacy
+        </h2><br>
+        
+        <p>
             At Eonweave, we're more than just code whisperers; we're partners in progress. With over 200 brilliant minds and 170+ projects
             successfully delivered, we're not just building software, we're building relationships.
-        </h3><br><br>
+            <pre></pre>
+        </p>
 
         <h4>Building on Authenticity</h4>
         <p>
