--- a/project/index.html
+++ b/project/index.html
@@ -1,45 +1,25 @@
 <!DOCTYPE html>
-
 <html lang="en">
-    <head>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Calculator for Body Mass Index (BMI) , Basal Metabolic Rate (BMR), and Total Daily Energy Expenditure (TDEE)">
+    <title>Health Calculator</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
-        <link href="styles.css" rel="stylesheet">
+</head>
 
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta charset="UTF-8">
-        <meta name="description" content="clothing ecommerce brand providing men's wear products">
+<body>
+    <br><h1>Health Calculator</h1><br>
+    <ul class="nav">
 
-        <title>Men's Wear Ecommerce Website</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
+        <button> <a href="bmi.html">Body Mass Index (BMI)</a> </button>
+        <button> <a href="bmr.html">Basal Metabolic Rate (BMR)</a> </button>
+        <button> <a href="tdee.html">Total Daily Energy Expenditure (TDEE)</a> </button>
+    </ul>
 
-    <body>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="products.html">Apparel</a>
-            <a href="about.html">About</a>
-            <a href="cart.html">Cart</a>
-        </nav>
 
-        <header>
-            <h1>wRen</h1>
-            <h2>Simplicity Meets Royalty</h2>
-
-        </header>
-
-        <main>
-            <section id="products">
-            </section>
-        </main>
-
-        <footer>
-            &copy; 2023 wRen
-        </footer>
-
-        <script src="script.js"></script>
-
-    </body>
+</body>
 </html>
